docroot/themes/humsci/humsci_basic/src/scss/partials/objects/_layouts.three_column_w_image.scss
@use '../variables/general' as *;
@use '../functions/general' as *;
@use '../mixins/theme' as *;
@use '../mixins/breakpoints' as *;
@use '../mixins/layout' as *;

.hb-three-column-w-image {
  &--one-sidebar,
  &--two-sidebar {
    @include grid-media-min('lg') {
      display: grid;
      grid-template-columns: 18% 1fr 18%;
      /* grid-template-rows: repeat(2, auto); */
      grid-auto-rows: auto;
      column-gap: hb-calculate-rems(32px);
    }
  }

  &--one-sidebar {
    &:has(.hb-three-column-w-image__sidebar-1) {
      @include grid-media-min('lg') {
        grid-template-areas: 'sidebar-1 main main';
      }
    }

    &:has(.hb-three-column-w-image__sidebar-2) {
      @include grid-media-min('lg') {
        grid-template-areas: 'main main sidebar-2';
      }
    }
  }

  &--two-sidebar {
    @include grid-media-min('lg') {
      grid-template-areas:
        'sidebar-1 main main'
        'sidebar-1 sidebar-2 sidebar-2';
    }

    @include grid-media-min('xl') {
      grid-template-areas: 'sidebar-1 main sidebar-2';
    }
  }

  // If this uses the "limited width" section width
  // option in layout builder, then apply our
  // hb-page-width mixin. Otherwise, the section will
  // go full width.
  &:not(.hs-full-width) {
    @include hb-page-width;
  }

  &--no-sidebar:not(.hs-full-width) {
    max-width: hb-calculate-rems(
      $hb-three-column-w-image-main-width
    ) !important;
  }

  &__sidebar-1 {
    grid-area: sidebar-1;

    .block,
    .block-hs-blocks,
    .hb-sidebar-block {
      @include hb-sidebar;
    }
  }

  &__main {
    grid-area: main;
    margin-bottom: hb-spacing-width();

    @include grid-media-min('lg') {
      .hb-three-column-w-image--one-sidebar &,
      .hb-three-column-w-image--two-sidebar & {
        margin-bottom: 0;
      }
    }
  }

  &__main-top {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    @include grid-media-min('md') {
      flex-wrap: nowrap;
    }
  }

  &__title-text {
    margin: 0 0 hb-spacing-width('xxs');
    word-break: normal;
    overflow-wrap: anywhere;
  }

  &__main-top-text {
    margin: 0 hb-spacing-width('xxs') hb-spacing-width('xxs') 0;
    word-break: normal;
    overflow-wrap: anywhere;

    .hb-three-column-w-image--one-sidebar & {
      @include grid-media-min('lg') {
        display: flex;
        flex-direction: column;
      }
    }

    .hb-three-column-w-image--no-sidebar & {
      @include grid-media-min('md') {
        display: flex;
        flex-direction: column;
      }
    }
  }

  // An note on the functionality of images
  // --------------------------------------
  // The height and width of images are set and can be changed in layout builder configuration for images.
  // Only images medium or large scale to 100% on mobile screens.
  // Once an image is larger than the mobile screen size, they scale down to fit.
  // Small images are only 200px width therefore will not scale at mobile.
  // Adding styles to make small image style will cause the image to pixelate which is not recommended.
  // Image will also wrap and scale at different breakpoints depending upon the length of the text in the title.
  &__main-top-image {
    @include grid-media-min('md') {
      flex-shrink: 0;
    }

    // Override class for WYSIWYG defaults
    &.align {
      &-right,
      &-left {
        margin: 0 0 hb-spacing-width('xxs');

        @include grid-media-min('md') {
          margin-bottom: hb-spacing-width();
        }
      }
    }

    .hb-three-column-w-image--one-sidebar & {
      @include grid-media-min('lg') {
        margin-left: hb-calculate-rems(20px);
      }
    }

    .hb-three-column-w-image--no-sidebar & {
      @include grid-media-min('md') {
        margin-left: hb-calculate-rems(20px);
      }
    }

    img {
      display: block;
    }
  }

  &__main-body {
    .hb-three-column-w-image--no-sidebar:not(.hs-full-width) & {
      max-width: hb-calculate-rems($hb-three-column-w-image-main-body-width);
    }

    .layout__region {
      margin-bottom: hb-calculate-rems(20px);
    }
  }

  &__sidebar-2 {
    grid-area: sidebar-2;
    margin-left: 0;

    .block,
    .block-hs-blocks,
    .hb-sidebar-block {
      @include hb-sidebar;
    }

    @include hb-traditional {
      font-size: hb-calculate-rems(16px);
      line-height: 127%;
    }
  }
}

